# airalogy

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PR_DESCRIPTION.md  PR_DESCRIPTION_DEPENDENCY_GRAPH.md  README.md  README.zh-CN.md  RELEASING.md  RELEASING.zh-CN.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  tsconfig.node.json  vitest.config.ts
.changeset/: README.md  aimd-editor-toolbar-wrap.md  aimd-field-metadata.md  aimd-fileid-extension-kinds.md  aimd-quoted-template-text.md  aimd-record-display-utils.md  aimd-recorder-contained-workbench.md  aimd-refs-rendering.md  aimd-workflow-block.md  aira-reader.md  aira-record-blobs.md  blood-type.md  bright-record-field-details.md  bright-tools-export.md  calm-nullable-recorder-fields.md  canonical-markdown-prose-styles.md  client-assigner-acorn-call-parser.md  code-str-and-var-table-defaults.md  collector-observations.md  compact-renderer-prose.md  compare-all-record-fields.md  complex-recorder-tables.md  config.json  contained-step-body.md  critic-markup-rendering.md  engine-docs-pages.md  entity-ref-connectors.md  enum-recorder-selects.md  fresh-record-toolbar-spacing.md  fuzzy-editor-panels.md  import-zip-protocol-packages.md  list-var-assigner-controls.md  neat-required-title-row.md  npm-workflow-engine.md  nullable-bool-recorder.md  nullable-empty-values-recorder.md  nullable-select-empty-label.md  package-protocol-examples.md  pinnable-aimd-media.md  plain-decimal-readonly-values.md  (+29 more)
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  docs.yml  release-npm.yml  release.yml
apps/aimd-demo/: index.html  package.json  tsconfig.json  vite.config.ts
apps/aira-reader/: CHANGELOG.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/aira-reader/src-tauri/: Cargo.toml  tauri.conf.json
apps/aira-reader/src-tauri/capabilities/: default.json
apps/aira-reader/src-tauri/icons/: icon.icns
apps/aira-reader/src-tauri/src/: lib.rs  main.rs
apps/protocol-demo/: CHANGELOG.md  index.html  package.json  tsconfig.json  vite.config.ts
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mjs
docs/aimd/: package.json
docs/airalogy/: index.md
docs/airalogy-engine/: AGENTS.md  README.md  README.zh-CN.md  index.md  package.json
docs/en/: README.md
docs/home/: index.md  package.json
docs/zh/: README.md  index.md
examples/aimd/: README.md  README.zh-CN.md  index.json
examples/aira/: README.md  multi-protocol-records.aira  protocols-bundle.aira  records-with-file.aira  records-with-protocol.aira  single-protocol.aira
examples/protocols/: README.md  README.zh-CN.md  index.json
plans/aimd/: fixplan-20260317-audit.md
schemas/aira/: manifest.v1.schema.json  record.v1.schema.json
scripts/aimd/: create-demo-route-shims.mjs  generate-built-in-type-metadata.mjs
scripts/airalogy-engine/: build-rootfs.mjs
spec/: README.md
spec/contract-tests/: README.md
tests/: test_archive.py  test_assign_execution.py  test_assigner.py  test_assigner_state_mutation.py  test_cli.py  test_dependency_graph.py  test_frontend_trigger.py  test_frontend_trigger_v2.py  test_types.py
(+306 files in other folders)
