[project]
name = "airalogy"
version = "0.0.8"
description = "The world's first universal framework for standardized data digitization"
readme = "README.md"
authors = [{ name = "Airalogy Team" }]
requires-python = ">=3.13"
dependencies = ["pydantic == 2.12.3", "httpx == 0.28.1", "isodate == 0.7.2"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]
license = { text = "Apache-2.0" }


[project.urls]
Documentation = "https://github.com/airalogy/airalogy#readme"
Source = "https://github.com/airalogy/airalogy"


[dependency-groups]
dev = ["pytest==8.4.2"]


[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
