[project]
name = "airalogy"
# Release checklist: bump version here, add an entry to `CHANGELOG.md`, then tag the merged release commit as `vX.Y.Z`.
version = "0.8.0"
description = "The world's first universal framework for standardized data digitization"
readme = "README.md"
authors = [{ name = "Airalogy Team" }]
requires-python = ">=3.13"
dependencies = [
  "pydantic == 2.12.5",
  "httpx == 0.28.1",
  "isodate == 0.7.2",
  "pyyaml==6.0.3",
  "tree-sitter==0.25.2",
  "tree-sitter-javascript==0.25.0",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
license = { text = "Apache-2.0" }

[project.optional-dependencies]
# `markitdown` uses its own optional extras per filetype (e.g. `pdf`, `docx`).
# Our backend and tests cover PDF/DOCX, so we include these extras by default.
markitdown = ["markitdown[pdf,docx]"]


[project.urls]
Documentation = "https://github.com/airalogy/airalogy#readme"
Source = "https://github.com/airalogy/airalogy"

[project.scripts]
airalogy = "airalogy.cli:main"


[dependency-groups]
dev = ["pytest==9.0.2", "markitdown[pdf,docx]"]


[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv]
required-version = ">=0.11,<0.12"
